# postgres-airflow-jlr

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: merge-main.yml
env/Scripts/: activate  activate-global-python-argcomplete  activate.bat  get_objgraph  nvd3-script.py  python-argcomplete-check-easy-install-script  register-python-argcomplete  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  slugify-script.py  undill
source/: Dockerfile  docker-compose.yaml  requirements.txt
source/dags/: dq.py  extraction.py  funct.sql  ingest_script.py  ingestion.py  test.py
source/env/Scripts/: activate  activate.bat
source/transform_load/: create_ddl.sql  dml.sql  funct.sql  ingest_data.sql  load_staging_data.sql  profit.sql
