[metadata]
name = jlr Assessment
version = 1.0.0
description = working on dataset that consist of base_data, options_data, vehicle_line_mapping data
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/AdenijiMujeeb/itv_hub
author = Mujeeb Adeniji
author_email = adenijimujeeb@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    dags
install_requires =
    apache-airflow==2.2.3
    apache-airflow[postgres]==2.2.3
    psycopg2-binary==2.9.1
    markupsafe==2.0.1
    pyarrow==5.0.0
    pandas==1.3.4

python_requires = >=3.8
package_dir =
    =source
zip_safe = no

[options.extras_require]
testing =
    black>=20.0
    click>=8.0
    flake8>=3.9
    pytest>=6.0
    tox>=3.24

[options.package_data]
dags = py.typed

[flake8]
max-line-length = 88
ignore = E501,W503